--- a/docs/howtos/quick-start/cheat-sheets/connect.mdx
+++ b/docs/howtos/quick-start/cheat-sheets/connect.mdx
@@ -7,7 +7,10 @@ import TabItem from '@theme/TabItem';
   values={[
     {label: 'CLI', value: 'CLI'},
     {label: 'RedisInsight', value: 'REDIS_INSIGHT'},
-    {label: 'NodeRedis', value: 'NODE_JS'},
+    {label: 'node-redis', value: 'NODE_JS'},
+    {label: 'redis-py', value: 'PYTHON'},
+    {label: 'NRedisStack', value: 'C#'},
+    {label: 'Jedis', value: 'JAVA'}
   ]}>
 
 <TabItem value="CLI">
@@ -49,6 +52,37 @@ await client.connect();
 //await client.set('key', 'value');
 
 await client.disconnect();
+```
+
+</TabItem>
+
+<TabItem value="PYTHON">
+
+```python
+import redis
+
+r = redis.Redis(host='localhost', port=6379, db=0)
+```
+
+</TabItem>
+
+<TabItem value="C#">
+
+```csharp
+using StackExchange.Redis;
+
+ConnectionMultiplexer redis = ConnectionMultiplexer.Connect("localhost");
+IDatabase db = redis.GetDatabase();
+```
+
+</TabItem>
+
+<TabItem value="JAVA">
+
+```java
+import redis.clients.jedis.JedisPooled;
+
+JedisPooled jedis = new JedisPooled("localhost", 6379);
 ```
 
 </TabItem>
