--- a/docs/howtos/quick-start/cheat-sheets/streams.mdx
+++ b/docs/howtos/quick-start/cheat-sheets/streams.mdx
@@ -6,7 +6,10 @@ import TabItem from '@theme/TabItem';
   groupId="REDIS_CHEAT_SHEET"
   values={[
     {label: 'CLI', value: 'CLI'},
-    {label: 'NodeRedis', value: 'NODE_JS'},
+    {label: 'node-redis', value: 'NODE_JS'},
+    {label: 'redis-py', value: 'PYTHON'},
+    {label: 'NRedisStack', value: 'C#'},
+    {label: 'Jedis', value: 'JAVA'}
   ]}>
 
 <TabItem value="CLI">
@@ -231,6 +234,76 @@ console.log(xDelResult); // 1
     */
 const xTrimResult = await client.xTrim('myStream', 'MAXLEN', 0);
 console.log(xTrimResult); // 0
+```
+
+</TabItem>
+
+<TabItem value="PYTHON">
+
+```python
+# XADD key field value [field value ...]
+# O(1) for new entries, O(N) when trimming where N is the number of evicted values
+# Appends the specified stream entry to the stream at the specified key.
+r.xadd('temperatures:us-ny:10007',
+       {'temp_f': 87.2, 'pressure': 29.69, 'humidity': 46})
+r.xadd('temperatures:us-ny:10007',
+       {'temp_f': 83.1, 'pressure': 29.21, 'humidity': 46.5})
+r.xadd('temperatures:us-ny:10007',
+       {'temp_f': 81.9, 'pressure': 28.37, 'humidity': 43.7})
+
+# XREAD [COUNT count] [BLOCK milliseconds] STREAMS key [key ...] ID [ID ...]
+# Read data from one or multiple streams, only returning entries with an ID greater than the last received ID reported by the caller.
+r.xread({'temperatures:us-ny:10007': '0-0'})
+```
+
+</TabItem>
+
+<TabItem value="C#">
+
+```csharp
+/*
+ * XADD key ID field value [field value ...]
+ * O(1) for new entries, O(N) when trimming where N is the number of evicted
+ * values
+ * Appends the specified stream entry to the stream at the specified key.
+ */
+db.StreamAdd("temperatures:us-ny:10007", new NameValueEntry[] { new NameValueEntry("temp_f", "87.2"), new NameValueEntry("pressure", "29.69"), new NameValueEntry("humidity", "46.0") });
+db.StreamAdd("temperatures:us-ny:10007", new NameValueEntry[] { new NameValueEntry("temp_f", "83.1"), new NameValueEntry("pressure", "29.21"), new NameValueEntry("humidity", "46.5") });
+db.StreamAdd("temperatures:us-ny:10007", new NameValueEntry[] { new NameValueEntry("temp_f", "81.9"), new NameValueEntry("pressure", "28.37"), new NameValueEntry("humidity", "43.7") });
+
+/*
+ * XREAD [COUNT count] [BLOCK milliseconds] STREAMS key [key ...] ID [ID ...]
+ * Read data from one or multiple streams, only returning entries with an ID
+ * greater than the last received ID reported by the caller.
+ */
+db.StreamRead("temperatures:us-ny:10007", "0-0");
+```
+
+</TabItem>
+
+<TabItem value="JAVA">
+
+```java
+/*
+ * XADD key ID field value [field value ...]
+ * O(1) for new entries, O(N) when trimming where N is the number of evicted
+ * values
+ * Appends the specified stream entry to the stream at the specified key.
+ */
+jedis.xadd("temperatures:us-ny:10007", StreamEntryID.NEW_ENTRY,
+		Map.of("temp_f", "87.2", "pressure", "29.69", "humidity", "46.0"));
+jedis.xadd("temperatures:us-ny:10007", StreamEntryID.NEW_ENTRY,
+		Map.of("temp_f", "83.1", "pressure", "29.21", "humidity", "46.5"));
+jedis.xadd("temperatures:us-ny:10007", StreamEntryID.NEW_ENTRY,
+		Map.of("temp_f", "81.9", "pressure", "28.37", "humidity", "43.7"));
+
+/*
+ * XREAD [COUNT count] [BLOCK milliseconds] STREAMS key [key ...] ID [ID ...]
+ * Read data from one or multiple streams, only returning entries with an ID
+ * greater than the last received ID reported by the caller.
+ */
+jedis.xread(XReadParams.xReadParams().count(5).block(1000),
+		singletonMap("temperatures:us-ny:10007", new StreamEntryID(0, 0)));
 ```
 
 </TabItem>
