--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -11,14 +11,14 @@ The Redis Developer Relations Team hosts a variety of live content on [Twitch][t
 
 |        Date             |    Time      | Streamers                                                                                             | Show                                                                                                 |
 | :---------------------: | :----------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
-
+| Thursday, Sept 23       | 1:00PM UTC   | [Simon Prickett][simon]                                                                               | [Introducing Polygon Search in Redis Stack 7.2][101]                                                 |
 
 ## Past Events
 
 |         Date           | Streamers                                                                                             | Show                                                                                             |
 | :-------------------:  | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------- |
-| Thursday, July 20th    | [Simon Prickett][simon]                                                                               | [Simon's IoT Show: Counting Aircraft!][100]                                                      |
-| Tuesday, July 4th      | [Simon Prickett][simon]                                                                               | [Simon's IoT Show: Searching and Indexing Image Data with Redis Stack and Python - Episode 4][99]|
+| Thursday, July 20      | [Simon Prickett][simon]                                                                               | [Simon's IoT Show: Counting Aircraft!][100]                                                      |
+| Tuesday, July 4        | [Simon Prickett][simon]                                                                               | [Simon's IoT Show: Searching and Indexing Image Data with Redis Stack and Python - Episode 4][99]|
 | Thursday, June 1       | [Simon Prickett][simon]                                                                               | [Simon's IoT Show: Searching and Indexing Image Data with Redis Stack and Python - Episode 3][98]|       
 | Friday, May 19         | [Simon Prickett][simon]                                                                               | [Simon's IoT Show: Searching and Indexing Image Data with Redis Stack][97]                       |
 | Thursday, April 27     | [Simon Prickett][simon]                                                                               | [Simon's IoT Show: Storing Photos in Redis with the Raspberry Pi Camera and Python][96]          |
@@ -165,6 +165,7 @@ The Redis Developer Relations Team hosts a variety of live content on [Twitch][t
 [officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
+[101]: https://www.youtube.com/watch?v=CegTSglMUks
 [100]: https://www.youtube.com/watch?v=ttXq_E4Galw
 [99]: https://www.youtube.com/watch?v=l__N7V0kje0
 [98]: https://www.youtube.com/watch?v=qci-pz8e5nk
