Moved latest stream to past.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -11,12 +11,12 @@ The Redis Developer Relations Team hosts a variety of live content on [Twitch][t
 
 |        Date             |    Time      | Streamers                                                                                             | Show                                                                                                 |
 | :---------------------: | :----------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
-| Thursday, Sept 23       | 1:00PM UTC   | [Simon Prickett][simon]                                                                               | [Introducing Polygon Search in Redis Stack 7.2][101]                                                 |
 
 ## Past Events
 
 |         Date           | Streamers                                                                                             | Show                                                                                             |
 | :-------------------:  | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------- |
+| Thursday, Sept 21      | [Simon Prickett][simon]                                                                               | [Introducing Polygon Search in Redis Stack 7.2][101]                                             |
 | Thursday, July 20      | [Simon Prickett][simon]                                                                               | [Simon's IoT Show: Counting Aircraft!][100]                                                      |
 | Tuesday, July 4        | [Simon Prickett][simon]                                                                               | [Simon's IoT Show: Searching and Indexing Image Data with Redis Stack and Python - Episode 4][99]|
 | Thursday, June 1       | [Simon Prickett][simon]                                                                               | [Simon's IoT Show: Searching and Indexing Image Data with Redis Stack and Python - Episode 3][98]|       
